--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "app-catalago",
+  "name": "app_catalago",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "heroku-postbuil":"ng build"
   },
+
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.2.0",
@@ -20,6 +22,7 @@
     "@angular/router": "^14.2.0",
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.10.2",
+    "express": "^4.18.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
